examples/sidecar/jenkins-sidecar.yaml
apiVersion: v1
kind: DeploymentConfig
metadata:
  labels:
    app: jenkins
  name: jenkins
spec:
  replicas: 1
  selector:
    app: jenkins
    deploymentconfig: jenkins
  template:
    metadata:
      labels:
        app: jenkins
        deploymentconfig: jenkins
    spec:
      serviceAccountName: jenkins
      containers:
      - image: openshift/jenkins-2-centos7:latest
        imagePullPolicy: Always
        name: application
        ports:
        - containerPort: 8080
          protocol: TCP
        terminationMessagePath: /dev/termination-log
      - image: twalter/openshift-nginx:stable-alpine
        imagePullPolicy: Always
        name: nginx
        ports:
        - containerPort: 8081
          protocol: TCP
        volumeMounts:
        - mountPath: /etc/nginx/conf.d/
          name: nginx-config-volume
      volumes:
      - configMap:
          defaultMode: 420
          name: jenkins-nginx-config
        name: nginx-config-volume
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: jenkins
  name: jenkins
spec:
  ports:
  - port: 8081
    protocol: TCP
    targetPort: 8081
    name: http
  selector:
    app: jenkins
    deploymentconfig: jenkins
---
apiVersion: v1
kind: Route
metadata:
  labels:
    app: jenkins
  name: jenkins
spec:
  port:
    targetPort: 8081
  to:
    kind: Service
    name: jenkins
